// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`progress-table renders correctly 1`] = `
<div
  className="css-ygw3aa-LabelledCard"
>
  <div
    className="css-lz4b3k-Label"
  >
    dashboard__project_table_title
  </div>
  <div
    className="css-1txsfgs-Card"
  >
    <div
      className="card-content css-1mhdhqr-CardContent"
    >
      <div
        className="css-18lu61u-Table"
      >
        <div
          className="css-443iam-Table"
        >
          <div
            className="css-bf80ks-Table"
          >
            dashboard__project_table_participant_header
            <div
              className="css-1wnpft0-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
              onClick={[Function]}
            />
          </div>
          <div
            className="css-bf80ks-Table"
          >
            dashboard__project_table_element_header
            <div
              className="css-1wnpft0-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
              onClick={[Function]}
            />
          </div>
          <div
            className="css-bf80ks-Table"
          >
            dashboard__project_table_progress_header
            <div
              className="css-0"
              id="tooltip_42"
            >
              <div
                className="css-1wnpft0-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
                onClick={[Function]}
              />
            </div>
            <div
              className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
              role="tooltip"
              style={
                {
                  "backgroundColor": "#2e3032",
                  "zIndex": 1,
                }
              }
            >
              dashboard__project_table_progress_tooltip
              <div
                className="react-tooltip-arrow styles-module_arrow__K0L3T"
                style={{}}
              />
            </div>
          </div>
        </div>
        <div
          className="css-tqgzls-Table"
        >
          <div
            className="css-1ihrgr1-Table"
          >
            <div
              className="entity-row css-22vfow-Table"
              onClick={[Function]}
            >
              <div
                className="css-fuywjr-Table"
              >
                Hasheem Pollastrino
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-4fctw3-ProgressElementColumn"
                >
                  <div
                    className="css-cj5xss-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-17zbm7y-Text"
                  >
                    Scenario 2
                  </div>
                </div>
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-2d7pc4-ProgressStepsColumn"
                >
                  <div
                    className="css-17zbm7y-Text"
                  >
                    1 / 3
                  </div>
                  <div
                    className="css-a9rzaf-ProgressStepsColumn"
                  >
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-s5q725-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_completed
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-qig85-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_progressing
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-1qo9wa8-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_open
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                  </div>
                  <div
                    className="css-1iicq3a-ProgressStepsColumn"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1ihrgr1-Table"
          >
            <div
              className="entity-row css-22vfow-Table"
              onClick={[Function]}
            >
              <div
                className="css-fuywjr-Table"
              >
                Hasheem Pollastrino
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-4fctw3-ProgressElementColumn"
                >
                  <div
                    className="css-cj5xss-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-17zbm7y-Text"
                  >
                    Scenario 1
                  </div>
                </div>
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-2d7pc4-ProgressStepsColumn"
                >
                  <div
                    className="css-17zbm7y-Text"
                  >
                    0 / 3
                  </div>
                  <div
                    className="css-a9rzaf-ProgressStepsColumn"
                  >
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-qig85-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_progressing
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-1qo9wa8-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_open
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-1qo9wa8-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_open
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                  </div>
                  <div
                    className="css-1iicq3a-ProgressStepsColumn"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1ihrgr1-Table"
          >
            <div
              className="entity-row css-22vfow-Table"
              onClick={[Function]}
            >
              <div
                className="css-fuywjr-Table"
              >
                Hasheem Pollastrino
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-4fctw3-ProgressElementColumn"
                >
                  <div
                    className="css-cj5xss-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-17zbm7y-Text"
                  >
                    dashboard__project_table_progress_none
                  </div>
                </div>
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-2d7pc4-ProgressStepsColumn"
                >
                  <div
                    className="css-17zbm7y-Text"
                  >
                    0 / 3
                  </div>
                  <div
                    className="css-a9rzaf-ProgressStepsColumn"
                  >
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-1qo9wa8-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_open
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-1qo9wa8-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_open
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <div
                        className="progress-item css-1qo9wa8-ProgressStepsColumn"
                      />
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      dashboard__attendee_status_open
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                  </div>
                  <div
                    className="css-1iicq3a-ProgressStepsColumn"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`progress-table renders correctly with questionnaire 1`] = `
<div
  className="css-ygw3aa-LabelledCard"
>
  <div
    className="css-lz4b3k-Label"
  >
    dashboard__project_table_title
  </div>
  <div
    className="css-1txsfgs-Card"
  >
    <div
      className="card-content css-1mhdhqr-CardContent"
    >
      <div
        className="css-18lu61u-Table"
      >
        <div
          className="css-443iam-Table"
        >
          <div
            className="css-bf80ks-Table"
          >
            dashboard__project_table_participant_header
            <div
              className="css-1wnpft0-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
              onClick={[Function]}
            />
          </div>
          <div
            className="css-bf80ks-Table"
          >
            dashboard__project_table_element_header
            <div
              className="css-1wnpft0-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
              onClick={[Function]}
            />
          </div>
          <div
            className="css-bf80ks-Table"
          >
            dashboard__project_table_progress_questionnaire_header
            <div
              className="css-0"
              id="tooltip_42"
            >
              <div
                className="css-1wnpft0-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
                onClick={[Function]}
              />
            </div>
            <div
              className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
              role="tooltip"
              style={
                {
                  "backgroundColor": "#2e3032",
                  "zIndex": 1,
                }
              }
            >
              dashboard__project_table_progress_questionnaire_tooltip
              <div
                className="react-tooltip-arrow styles-module_arrow__K0L3T"
                style={{}}
              />
            </div>
          </div>
        </div>
        <div
          className="css-tqgzls-Table"
        >
          <div
            className="css-1ihrgr1-Table"
          >
            <div
              className="entity-row css-22vfow-Table"
              onClick={[Function]}
            >
              <div
                className="css-fuywjr-Table"
              >
                Hasheem Pollastrino
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-4fctw3-ProgressElementColumn"
                >
                  <div
                    className="css-cj5xss-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-17zbm7y-Text"
                  >
                    Scenario 2
                  </div>
                </div>
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-1wjx22y-ProgressBarColumn"
                >
                  <div
                    className="css-17zbm7y-Text"
                  >
                    0 / 4
                  </div>
                  <div
                    className="css-vewmwr-ProgressBarColumn"
                  >
                    <div
                      className="progress-element css-z4yg9v-ProgressBarColumn"
                    />
                  </div>
                  <div
                    className="css-fxrihe-ProgressBarColumn"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1ihrgr1-Table"
          >
            <div
              className="entity-row css-22vfow-Table"
              onClick={[Function]}
            >
              <div
                className="css-fuywjr-Table"
              >
                Hasheem Pollastrino
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-4fctw3-ProgressElementColumn"
                >
                  <div
                    className="css-cj5xss-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-17zbm7y-Text"
                  >
                    Scenario 1
                  </div>
                </div>
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-1wjx22y-ProgressBarColumn"
                >
                  <div
                    className="css-17zbm7y-Text"
                  >
                    0 / 4
                  </div>
                  <div
                    className="css-vewmwr-ProgressBarColumn"
                  >
                    <div
                      className="progress-element css-z4yg9v-ProgressBarColumn"
                    />
                  </div>
                  <div
                    className="css-fxrihe-ProgressBarColumn"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1ihrgr1-Table"
          >
            <div
              className="entity-row css-22vfow-Table"
              onClick={[Function]}
            >
              <div
                className="css-fuywjr-Table"
              >
                Hasheem Pollastrino
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-4fctw3-ProgressElementColumn"
                >
                  <div
                    className="css-cj5xss-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-17zbm7y-Text"
                  >
                    dashboard__project_table_progress_none
                  </div>
                </div>
              </div>
              <div
                className="css-fuywjr-Table"
              >
                <div
                  className="css-1wjx22y-ProgressBarColumn"
                >
                  <div
                    className="css-17zbm7y-Text"
                  >
                    0 / 4
                  </div>
                  <div
                    className="css-vewmwr-ProgressBarColumn"
                  >
                    <div
                      className="progress-element css-z4yg9v-ProgressBarColumn"
                    />
                  </div>
                  <div
                    className="css-fxrihe-ProgressBarColumn"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
